--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
 
 body {
     background-color: var(--black);
-    background-image: url('assets/images/morcegos.png');
+    background-image: url('../assets/images/morcegos.png');
     background-size: 300px 300px;
     background-repeat: repeat;
     font-family: "Creepster", system-ui;
@@ -68,7 +68,7 @@ header .nav-item {
 
 #initial {
     background-color: var(--purple);
-    background-image: url(assets/images/bg.png);
+    background-image: url('../assets/images/bg.png');
     background-size: cover;
     height: 97vh;
     width: 100%;
